[workspace]
resolver = "2"
members = [
    "contracts/grantboard",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.test]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true